--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -1,19 +1,23 @@
 ---
 layout: post
 title: "Copulas in Probability Theory"
+categories: "Money and Finance"
 ---
 
-## Basic Concepts
+* This will become a table of contents (this text will be scrapped).
+{:toc}
 
-The term "Copula" was first introduced by Abe Sklar in his 1959 article (see [^1]). It has been widely used, though not always applied properly, in financial and econometric modeling, especially in pricing securities that depend on many underlying securities.
+<h2>Basic Concepts</h2>
+
+The term "Copula" was first introduced by [Abe Sklar](https://en.wikipedia.org/wiki/Abe_Sklar) in his 1959 article (see [^1]). It has been widely used, though not always applied properly, in financial and econometric modeling, especially in pricing securities that depend on many underlying securities.
 
 <!-- excerpt-end -->
 
-Properties of copulas are analogous to properties of joint distributions. The *joint distribution* of a set of random variables $(Y_{1}, \dots , Y_{m})$ is defined as
+Properties of copulas are analogous to properties of joint distributions. The **joint distribution**{: style="color: red"} of a set of random variables $(Y_{1}, \dots , Y_{m})$ is defined as
 
 $$F(y_{1}, \dots , y_{m}) = \mathbb{P}\{Y_{i} \leq y_{i}; i = 1, \dots , m\},$$
 
-and the **survival function** corresponding to $F(y_{1}, \dots , y_{m})$ is given by $$\overline{F}(y_{1}, \dots , y_{m}) = \mathbb{P}\{Y_{i} > y_{i}; i = 1, \dots , m\}.$$
+and the **survival function**{: style="color: red"} corresponding to $F(y_{1}, \dots , y_{m})$ is given by $$\overline{F}(y_{1}, \dots , y_{m}) = \mathbb{P}\{Y_{i} > y_{i}; i = 1, \dots , m\}.$$
 
 **Definition 1.** An $n$-dimensional copula (briefly, an *n-copula*) is a function $C$ from the unit $n$-cube $[0, 1]^{n}$ to the unit interval $[0, 1]$ which satisfies the following conditions:
 
@@ -37,7 +41,7 @@ $$C(u_{1}, \dots , u_{n}) = H(F^{-1}(u_{1}), \dots , F_{n}^{-1}(u_{n})),$$
 
 where, for any one-dimensional distribution function $F$, $F^{-1}(t) = \sup\{x \mid F(x) < t\}$ (the "quantile transform"). These results show that much of the study of joint distribution functions can be reduced to the study of copulas!
 
-To prove Sklar's theorem, we shall introduce the notion of "**distributional transform**":
+To prove Sklar's theorem, we shall introduce the notion of "**distributional transform**{: style="color: red"}":
 
 **Definition 2.** Let $Y$ be a real random variable with distribution function $F$ and let $V$ be a random variable independent of $Y$, such that $V \sim U(0, 1)$. The modified distribution function $F(x, \lambda)$ is defined by
 
@@ -58,7 +62,7 @@ $$
 
 i.e. $C$ is a copula of $F$.
 
-## References
+<h2>References</h2>
 
 [^1]: Abe Sklar, Random Variables, Distribution Functions, and Copulas, *Kybernetika*, Vol. 9 (1973), No. 6, pp. 449-460.
 
