related posts fixed

--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Copulas in Probability Theory"
-categories: "Money and Finance"
+category: "Money and Finance"
 ---
 
 * This will become a table of contents (this text will be scrapped).
