--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -9,7 +9,7 @@ category: "Money and Finance"
 
 <h2>Basic Concepts</h2>
 
-The term "Copula" was first introduced by [Abe Sklar](https://en.wikipedia.org/wiki/Abe_Sklar) in his 1959 article (see [^1]). It has been widely used, though not always applied properly, in financial and econometric modeling, especially in pricing securities that depend on many underlying securities.
+The term "Copula" was coined by [Abe Sklar](https://en.wikipedia.org/wiki/Abe_Sklar) in his 1959 article, which was written in French (see [^1]). It has been widely used, though not always applied properly, in financial and econometric modeling, especially in pricing securities that depend on many underlying securities.
 
 <!-- excerpt-end -->
 
@@ -39,7 +39,11 @@ Moreover, letting $u_{i} = F_{i}(x_{i}), i = 1, \dots , n$, yields
 
 $$C(u_{1}, \dots , u_{n}) = H(F^{-1}(u_{1}), \dots , F_{n}^{-1}(u_{n})),$$
 
-where, for any one-dimensional distribution function $F$, $F^{-1}(t) = \sup\{x \mid F(x) < t\}$ (the "quantile transform"). These results show that much of the study of joint distribution functions can be reduced to the study of copulas!
+where, for any one-dimensional distribution function $F$,
+
+$$F^{-1}(t) = \sup \{ x \mid F(x) < t \}$$
+
+(the "quantile transform"). These results show that much of the study of joint distribution functions can be reduced to the study of copulas!
 
 To prove Sklar's theorem, we shall introduce the notion of "**distributional transform**{: style="color: red"}":
 
@@ -49,7 +53,7 @@ $$F(x, \lambda) := \mathbb{P}\{X < x\} + \lambda \mathbb{P}(Y = x).$$
 
 We call $U := F(Y, V)$ the (generalized) distributional transform of $Y$.
 
-**Proof of Theorem 1.**  Let $X = (X_{1}, \dots , X_{n})$ be a random vector on a probability space with distribution function $F$ and let $V \sim U(0, 1)$ be independent of $X$. Considering the distributional transforms $U_{i} := F_{i}(X_{i}, V), 1 \leq i \leq n$, we have $U_{i} \overset{d}{=} U(0, 1)$ and $X_{i} = F_{i}^{-1}(U_{i})$ a.s., $1 \leq i \leq n$. Thus defining $C$ to be the distribution function of $U = (U_{1}, \dots , U_{n})$ we obtain
+**Proof of Theorem 1.**  Let $X = (X_{1}, \dots , X_{n})$ be a random vector on a probability space with distribution function $F$ and let $V \sim U(0, 1)$ be independent of $X$. Considering the distributional transforms $U_{i} := F_{i}(X_{i}, V), 1 \leq i \leq n$, we have $U_{i} \overset{d}{=} U(0, 1)$ and $X_{i} = F_{i}^{-1}(U_{i})$ a.s., $1 \leq i \leq n$. Thus, defining $C$ to be the distribution function of $U = (U_{1}, \dots , U_{n})$ we obtain
 
 $$
 \begin{align}
