fix code blocks

--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -4,14 +4,14 @@ title: "Copulas in Probability Theory"
 category: "Money and Finance"
 ---
 
-* This will become a table of contents (this text will be scrapped).
-{:toc}
-
-<h2>Basic Concepts</h2>
-
 The term "Copula" was coined by [Abe Sklar](https://en.wikipedia.org/wiki/Abe_Sklar) in his 1959 article, which was written in French (see [^1]). It has been widely used, though not always applied properly, in financial and econometric modeling, especially in pricing securities that depend on many underlying securities.
 
 <!-- excerpt-end -->
+
+* TOC 
+{:toc}
+
+<h2>Basic Concepts</h2>
 
 Properties of copulas are analogous to properties of joint distributions. The **joint distribution**{: style="color: red"} of a set of random variables $(Y_{1}, \dots , Y_{m})$ is defined as
 
