--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -4,14 +4,18 @@ title: "Copulas in Probability Theory"
 category: "Money and Finance"
 ---
 
-The term "Copula" was coined by [Abe Sklar](https://en.wikipedia.org/wiki/Abe_Sklar) in his 1959 article, which was written in French (see [^1]). It has been widely used, though not always applied properly, in financial and econometric modeling, especially in pricing securities that depend on many underlying securities.
+The term "Copula" was coined by [Abe Sklar](https://en.wikipedia.org/wiki/Abe_Sklar) in his 1959 article, which was written in French (see [^1]). Copulas have been widely used, though not always applied properly, in financial and econometric modeling, especially in pricing securities that depend on many underlying securities. Formally put, for an $n$-variate function $F$, the copula associated with $F$ is a distribution function $C: [0, 1]^{n} \rightarrow [0, 1]$ that satisfies
+
+$$F(y_{1}, \dots , y_{n}) = C(F_{1}(y_{1}), \dots , F_{n}(y_{n}) ; \theta),$$
+
+where $\theta$ is a parameter of the copula called the **dependence parameter**{: style="color: red"}, which means dependence between the marginals. This is a frequent starting point of empirical applications.
 
 <!-- excerpt-end -->
 
 * TOC 
 {:toc}
 
-<h2>Basic Concepts</h2>
+## Basic Concepts
 
 Properties of copulas are analogous to properties of joint distributions. The **joint distribution**{: style="color: red"} of a set of random variables $(Y_{1}, \dots , Y_{m})$ is defined as
 
@@ -43,7 +47,7 @@ where, for any one-dimensional distribution function $F$,
 
 $$F^{-1}(t) = \sup \{ x \mid F(x) < t \}$$
 
-(the "quantile transform"). These results show that much of the study of joint distribution functions can be reduced to the study of copulas!
+(the "quantile transform"). In practice, econometricians often know a great deal about marginal distributions of individual variables but little about their joint behavior. These results show that much of the study of joint distribution functions can be reduced to the study of copulas!
 
 To prove Sklar's theorem, we shall introduce the notion of "**distributional transform**{: style="color: red"}":
 
@@ -66,10 +70,10 @@ $$
 
 i.e. $C$ is a copula of $F$.
 
-<h2>References</h2>
+## References
 
 [^1]: Abe Sklar, Random Variables, Distribution Functions, and Copulas, *Kybernetika*, Vol. 9 (1973), No. 6, pp. 449-460.
 
 [^2]: Berthold Schweizer, Thirty Years of Copulas, In: G. Dall' Aglio, S. Kotz, and G. Salinetti (eds.): *Advances in Probability Distributions with Given Marginals: Beyond the Copulas.* The Netherlands: Kluwer Academic Publishers.
 
-[^3]: Pravin K. Trivedi and David M. Zimmer, *Copula Modeling: An Introduction for Practitioners* Foundations and Trends&reg in Econometrics, Vol. 1, No. 1 (2005) pp. 1-111.
+[^3]: Pravin K. Trivedi and David M. Zimmer, *Copula Modeling: An Introduction for Practitioners* Foundations and Trends in Econometrics, Vol. 1, No. 1 (2005) pp. 1-111.
