--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -8,12 +8,13 @@ The term "Copula" was coined by [Abe Sklar](https://en.wikipedia.org/wiki/Abe_Sk
 
 $$F(y_{1}, \dots , y_{n}) = C(F_{1}(y_{1}), \dots , F_{n}(y_{n}) ; \theta),$$
 
-where $\theta$ is a parameter of the copula called the **dependence parameter**{: style="color: red"}, which means dependence between the marginals. This is a frequent starting point of empirical applications.
+where $\theta$ is a parameter of the copula called the **dependence parameter**{: style="color: red"}, which means dependence between the marginals. This is a frequent starting point of empirical applications.<br />
 
 <!-- excerpt-end -->
 
 * TOC 
 {:toc}
+<br />
 
 ## Basic Concepts
 
@@ -70,10 +71,33 @@ $$
 
 i.e. $C$ is a copula of $F$.
 
+Some common bivariate copulas:
+
+- **Product copula**{: style="color: red"} $C(u_{1}, u_{2}) = u_{1}u_{2}$, where $u_{1}$ and $u_{2}$ take values in the unit interval of the real line.
+- **Farlie-Gumbel-Morgenstern (FGM) copula**{: style="color: red"} $C(u_{1}, u_{2} ; \theta) = u_{1}u_{2}(1 + \theta(1 - u_{1})(1 - u_{2}))$[^4].
+- **Gaussian (normal) copula**{: style="color: red"} $C(u_{1}, u_{2} ; \theta) = \int_{-\infty}^{\Phi^{-1}(u_{1})} \int_{-\infty}^{\Phi^{-1}(u_{2})} \frac{1}{2\pi(1 - \theta^{2})^{1/2}} \cdot \frac{-(s^{2} - 2\theta s t + t^{2})}{2(1 - \theta^{2})}\,\mathrm{d}s \mathrm{d}t$, where $\Phi$ is the cdf of the standard normal distribution[^5].
+- **Student's t-copula**{: style="color: red"} $C^{t}(u_{1}, u_{2} ; \theta_{1}, \theta_{2}) = \int_{-infty}^{t_{\theta_{1}}^{-1}(u_{1})} \int_{-infty}^{t_{\theta_{2}}^{-1}(u_{2})} \frac{1}{2\pi(1 - \theta_{2}^{2})^{1/2}} \cdot \big\{1 + \frac{s^{2} - 2\theta_{2} s t + t^{2}}{\nu(1 - \theta_{2}^{2})}\big\}^{-(\theta_{1} + 2)/2}\,\mathrm{d}s \mathrm{d}t$, where $t_{\theta_{1}}^{-1}(u_{1})$ denotes the inverse of the cdf of the standard univariate $t$-distribution with $\theta_{1}$ degrees of freedom ($\theta_{1}$ controls the heaviness of the tails), and $\nu$ ($\rho$) denotes degrees of freedom (correlation) of the bivariate $t$-distribution.
+- **Clayton copula**{: style="color: red"} $C(u_{1}, u_{2} ; \theta) = (u_{1}^{-\theta} + u_{2}^{-\theta} - 1)^{-1/\theta}$ with the dependence parameter $\theta$ restricted on the region $(0, \infty)$.
+- **Frank copula**{: style="color: red"} $C(u_{1}, u_{2} ; \theta) = -\theta^{-1}\log \big\{ 1 + \frac{(e^{-\theta u_{1}} - 1)(e^{-\theta u_{2}} - 1)}{e^{-\theta} - 1} \big\}$ with the dependence parameter assuming any real value.
+- **Gumbel copula**{: style="color: red"} $C(u_{1}, u_{2} ; \theta) = \exp \big\{ -(\tilde{u}_{1}^{\theta} + \tilde{u}_{2}^{\theta})^{1/\theta} \big\}$ where $\tilde{u}_{j} = -\log u_{j}$ and $\theta \in [1, \infty)$.
+
 ## References
 
-[^1]: Abe Sklar, Random Variables, Distribution Functions, and Copulas, *Kybernetika*, Vol. 9 (1973), No. 6, pp. 449-460.
+[^1]: Abe Sklar, Random Variables, Distribution Functions, and Copulas, *Kybernetika*, Vol. 9, No. 6 (1973), pp. 449-460.
 
 [^2]: Berthold Schweizer, Thirty Years of Copulas, In: G. Dall' Aglio, S. Kotz, and G. Salinetti (eds.): *Advances in Probability Distributions with Given Marginals: Beyond the Copulas.* The Netherlands: Kluwer Academic Publishers.
 
 [^3]: Pravin K. Trivedi and David M. Zimmer, *Copula Modeling: An Introduction for Practitioners* Foundations and Trends in Econometrics, Vol. 1, No. 1 (2005) pp. 1-111.
+
+[^4]: James E. Prieger, A Flexible Parametric Selection Model for Non-Normal Data with Application to Health Care Usage, *Journal of Applied Econometrics*, Vol. 17, No. 4 (2002), pp. 367-392. In this article, FGM copula is chosen for sample selection in that "the marginal distributions in he FGM system may be of any form, as long as their cdfs are absolutely continuous."
+
+[^5]: Lung-Fei Lee, Generalized Econometric Models with Selectivity, *Econometrica*, Vol. 51, No. 2 (1983), pp. 507-512. In this article, Gaussian copula was proposed to tackle the censored regression model:
+
+$$
+\begin{align}
+     y_{1} &= x \beta + \sigma u, \quad \sigma > 0,\\
+     y^{*} &= z \gamma - \epsilon,
+\end{align}
+$$
+
+in which $u$ and $\epsilon$ conditional on $x$ and $z$ have absolutely continuous distribution functions, but the joint bivariate distribution of $u$ and $\epsilon$ is not specified.
