--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -89,13 +89,14 @@ i.e. $C$ is a copula of $F$.
 
      in which $u$ and $\epsilon$ conditional on $x$ and $z$ have absolutely continuous distribution functions, but the joint bivariate distribution of $u$ and $\epsilon$ is not specified.
 -    **Student's t-copula**{: style="color: red"}<br />
-     ${\scriptstyle C^{t}(u_{1}, u_{2} ; \theta_{1}, \theta_{2}) = \int_{-infty}^{t_{\theta_{1}}^{-1}(u_{1})} \int_{-infty}^{t_{\theta_{2}}^{-1}(u_{2})} \frac{1}{2\pi(1 - \theta_{2}^{2})^{1/2}} \cdot ( 1 + \frac{s^{2} - 2\theta_{2} s t + t^{2}}{\nu(1 - \theta_{2}^{2})} )^{-(\theta_{1} + 2)/2}\,\mathrm{d}s\,\mathrm{d}t}$, where $t_{\theta_{1}}^{-1}(u_{1})$ denotes the inverse of the cdf of the standard univariate $t$-distribution with $\theta_{1}$ degrees of freedom ($\theta_{1}$ controls the heaviness of the tails), and $\nu$ ($\rho$) denotes degrees of freedom (correlation) of the bivariate $t$-distribution.
+     ${\scriptstyle C^{t}(u_{1}, u_{2} ; \theta_{1}, \theta_{2}) = \int_{-\infty}^{t_{\theta_{1}}^{-1}(u_{1})} \int_{-\infty}^{t_{\theta_{2}}^{-1}(u_{2})} \frac{1}{2\pi(1 - \theta_{2}^{2})^{1/2}} \cdot ( 1 + \frac{s^{2} - 2\theta_{2} s t + t^{2}}{\nu(1 - \theta_{2}^{2})} )^{-(\theta_{1} + 2)/2}\,\mathrm{d}s\,\mathrm{d}t}$,<br />
+     where $t_{\theta_{1}}^{-1}(u_{1})$ denotes the inverse of the cdf of the standard univariate $t$-distribution with $\theta_{1}$ degrees of freedom ($\theta_{1}$ controls the heaviness of the tails), and $\nu$ / $\rho$ denotes degrees of freedom /correlation of the bivariate $t$-distribution.
 -    **Clayton copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = (u_{1}^{-\theta} + u_{2}^{-\theta} - 1)^{-1/\theta}$ with the dependence parameter $\theta$ restricted on the region $(0, \infty)$.
 -    **Frank copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = -\theta^{-1} \log ( 1 + \frac{(e^{-\theta u_{1}} - 1)(e^{-\theta u_{2}} - 1)}{e^{-\theta} - 1} )$ with the dependence parameter assuming any real value.
 -    **Gumbel copula**{: style="color: red"}<br />
-     $C(u_{1}, u_{2} ; \theta) = \exp ( -(\tilde{u}_{1}^{\theta} + \tilde{u}_{2}^{\theta})^{1/\theta} )$ where $\tilde{u}_{j} = -\log u_{j} \text{ and } \theta \in [1, \infty).$
+     $C(u_{1}, u_{2} ; \theta) = \exp ( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1/\theta} )$ where ${u}'_{j} = -\log u_{j} \text{ and } \theta \in [1, \infty).$
 
 ## References
 
