--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -46,9 +46,9 @@ $$C(u_{1}, \dots , u_{n}) = H(F^{-1}(u_{1}), \dots , F_{n}^{-1}(u_{n})),$$
 
 where, for any one-dimensional distribution function $F$,
 
-$$F^{-1}(t) = \sup \{ x \mid F(x) < t \}$$
+$$F^{-1}(t) = \sup \{ x \mid F(x) < t \} \text{ or equivalently } \inf \{ x \mid F(x) \geq t \}$$
 
-(the "quantile transform"). In practice, econometricians often know a great deal about marginal distributions of individual variables but little about their joint behavior. These results show that much of the study of joint distribution functions can be reduced to the study of copulas!
+(quasi-inverse, or the "quantile transform"). In practice, econometricians often know a great deal about marginal distributions of individual variables but little about their joint behavior. These results show that much of the study of joint distribution functions can be reduced to the study of copulas!
 
 To prove Sklar's theorem, we shall introduce the notion of "**distributional transform**{: style="color: red"}":
 
@@ -96,7 +96,13 @@ i.e. $C$ is a copula of $F$.
 -    **Frank copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = -\theta^{-1} \log ( 1 + \frac{(e^{-\theta u_{1}} - 1)(e^{-\theta u_{2}} - 1)}{e^{-\theta} - 1} )$ with the dependence parameter assuming any real value.
 -    **Gumbel copula**{: style="color: red"}<br />
-     $C(u_{1}, u_{2} ; \theta) = \exp ( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1/\theta} )$ where ${u}'_{j} = -\log u_{j} \text{ and } \theta \in [1, \infty).$
+     $C(u_{1}, u_{2} ; \theta) = \exp ( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1/\theta} )$ where
+     $${u}'_{j} = -\log u_{j} \text{ and } \theta \in [1, \infty).$$
+
+### The Fr\'{e}chet bounds for a copula
+
+## Construction of a Copula
+
 
 ## References
 
