--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -12,6 +12,8 @@ where $\theta$ is a parameter of the copula called the **dependence parameter**{
 
 <!-- excerpt-end -->
 
+## Table of Contents
+{.no_toc}
 * TOC 
 {:toc}
 <br />
@@ -76,7 +78,7 @@ i.e. $C$ is a copula of $F$.
 -    **Product copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2}) = u_{1}u_{2}$, where $u_{1}$ and $u_{2}$ take values in the unit interval of the real line.
 -    **Farlie-Gumbel-Morgenstern (FGM) copula**{: style="color: red"}<br />
-     $C(u_{1}, u_{2} ; \theta) = u_{1}u_{2}(1 + \theta(1 - u_{1})(1 - u_{2}))$[^4].
+     $C(u_{1}, u_{2} ; \theta) = u_{1}u_{2}[1 + \theta(1 - u_{1})(1 - u_{2})]$[^4].
 -    **Gaussian (normal) copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = \int_{-\infty}^{\Phi^{-1}(u_{1})} \int_{-\infty}^{\Phi^{-1}(u_{2})} \frac{1}{2\pi(1 - \theta^{2})^{1/2}} \cdot \frac{-(s^{2} - 2\theta s t + t^{2})}{2(1 - \theta^{2})}\,\mathrm{d}s\,\mathrm{d}t$, where $\Phi$ is the cdf of the standard normal distribution. In [Lee (1983)](https://www.jstor.org/stable/1912003?seq=1)[^5], Gaussian copula was proposed to tackle the censored regression model:
   
@@ -90,16 +92,16 @@ i.e. $C$ is a copula of $F$.
      in which $u$ and $\epsilon$ conditional on $x$ and $z$ have absolutely continuous distribution functions, but the joint bivariate distribution of $u$ and $\epsilon$ is not specified.
 -    **Student's t-copula**{: style="color: red"}<br />
      ${\scriptstyle C^{t}(u_{1}, u_{2} ; \theta_{1}, \theta_{2}) = \int_{-\infty}^{t_{\theta_{1}}^{-1}(u_{1})} \int_{-\infty}^{t_{\theta_{2}}^{-1}(u_{2})} \frac{1}{2\pi(1 - \theta_{2}^{2})^{1/2}} \cdot \biggl( 1 + \frac{s^{2} - 2\theta_{2} s t + t^{2}}{\nu(1 - \theta_{2}^{2})} \biggr)^{-(\theta_{1} + 2)/2}\,\mathrm{d}s\,\mathrm{d}t}$,<br />
-     where $t_{\theta_{1}}^{-1}(u_{1})$ denotes the inverse of the cdf of the standard univariate $t$-distribution with $\theta_{1}$ degrees of freedom ($\theta_{1}$ controls the heaviness of the tails), and $\nu$ / $\rho$ denotes degrees of freedom /correlation of the bivariate $t$-distribution.
+     where $t_{\theta_{1}}^{-1}(u_{1})$ denotes the inverse of the cdf of the standard univariate $t$-distribution with $\theta_{1}$ degrees of freedom ($\theta_{1}$ controls the heaviness of the tails), and $\nu$ / $\rho$ denotes degrees of freedom / correlation of the bivariate $t$-distribution.
 -    **Clayton copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = (u_{1}^{-\theta} + u_{2}^{-\theta} - 1)^{-1/\theta}$ with the dependence parameter $\theta$ restricted on the region $(0, \infty)$.
 -    **Frank copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = -\theta^{-1} \log\biggl( 1 + \frac{(e^{-\theta u_{1}} - 1)(e^{-\theta u_{2}} - 1)}{e^{-\theta} - 1}\biggr)$ with the dependence parameter assuming any real value.
 -    **Gumbel copula**{: style="color: red"}<br />
-     $C(u_{1}, u_{2} ; \theta) = \exp\biggl( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1/\theta} \biggr)$ where
+     $C(u_{1}, u_{2} ; \theta) = \exp{\biggl( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1/\theta} \biggr)}$ where
      $${u}'_{j} = -\log u_{j} \text{ and } \theta \in [1, \infty).$$
 
-### The Fr\'echet bounds for a copula
+### The Frechet bounds for a copula
 
 ## Construction of a Copula
 
