--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -13,7 +13,7 @@ where $\theta$ is a parameter of the copula called the **dependence parameter**{
 <!-- excerpt-end -->
 
 ## Table of Contents
-{.no_toc}
+{:.no_toc}
 * TOC 
 {:toc}
 <br />
@@ -98,10 +98,21 @@ i.e. $C$ is a copula of $F$.
 -    **Frank copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = -\theta^{-1} \log\biggl( 1 + \frac{(e^{-\theta u_{1}} - 1)(e^{-\theta u_{2}} - 1)}{e^{-\theta} - 1}\biggr)$ with the dependence parameter assuming any real value.
 -    **Gumbel copula**{: style="color: red"}<br />
-     $C(u_{1}, u_{2} ; \theta) = \exp{\biggl( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1/\theta} \biggr)}$ where
+     $C(u_{1}, u_{2} ; \theta) = e^{\biggl( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1/\theta} \biggr)}$ where
      $${u}'_{j} = -\log u_{j} \text{ and } \theta \in [1, \infty).$$
 
 ### The Frechet bounds for a copula
+
+Given an arbitrary $n$-variate joint cdf $F(y_{1}, \dots , y_{n})$ with univariate marginal cdfs $F_{1}, \dots , F_{n}$, the joint cdf is bounded below and above by the Frechet-Hoeffding lower and upper bounds, $F_{L}$ and $F_{U}$, defined as
+
+$$
+\begin{align}
+F_{L}(y_{1}, \dots , y_{n}) &= \max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \}, \\
+F_{U}(y_{1}, \dots , y_{n}) &= \min \{ F_{1}, \dots , F_{n} \},
+\end{align}
+$$
+
+which satisfy $\max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \} \leq F(y_{1}, \dots , y_{n}) \leq \min \{ F_{1}, \dots , F_{n} \}$. The upper bound is always a cdf while the lower bound is a cdf for $n = 2$.
 
 ## Construction of a Copula
 
