--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -98,7 +98,8 @@ i.e. $C$ is a copula of $F$.
 -    **Frank copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = -\theta^{-1} \log\biggl( 1 + \frac{(e^{-\theta u_{1}} - 1)(e^{-\theta u_{2}} - 1)}{e^{-\theta} - 1}\biggr)$ with the dependence parameter assuming any real value.
 -    **Gumbel copula**{: style="color: red"}<br />
-     $C(u_{1}, u_{2} ; \theta) = e^{\biggl( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1/\theta} \biggr)}$ where
+     $C(u_{1}, u_{2} ; \theta) = \exp\biggl( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1 / \theta} \biggr)$
+     where
      $${u}'_{j} = -\log u_{j} \text{ and } \theta \in [1, \infty).$$
 
 ### The Frechet bounds for a copula
@@ -113,6 +114,12 @@ F_{U}(y_{1}, \dots , y_{n}) &= \min \{ F_{1}, \dots , F_{n} \},
 $$
 
 which satisfy $\max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \} \leq F(y_{1}, \dots , y_{n}) \leq \min \{ F_{1}, \dots , F_{n} \}$. The upper bound is always a cdf while the lower bound is a cdf for $n = 2$.
+
+This definition also applies to copulas:
+
+$$\max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \} \leq C(y_{1}, \dots , y_{n}) \leq \min \{ F_{1}, \dots , F_{n}$$
+
+The upperbound is a copula, which we denote as $C_{U}(y_{1}, \dots , y_{n})$. If the lower bound is also a copula, then it is denoted as $C_{L}(y_{1}, \dots , y_{n})$.
 
 ## Construction of a Copula
 
