--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -48,7 +48,11 @@ $$C(u_{1}, \dots , u_{n}) = H(F^{-1}(u_{1}), \dots , F_{n}^{-1}(u_{n})),$$
 
 where, for any one-dimensional distribution function $F$,
 
-$$F^{-1}(t) = \sup \{ x \mid F(x) < t \} \text{ or equivalently } \inf \{ x \mid F(x) \geq t \}$$
+$$F^{-1}(t) = \sup \{ x \mid F(x) < t \},$$
+
+or equivalently,
+
+$$F^{-1}(t) = \inf \{ x \mid F(x) \geq t \}$$
 
 (quasi-inverse, or the "quantile transform"). In practice, econometricians often know a great deal about marginal distributions of individual variables but little about their joint behavior. These results show that much of the study of joint distribution functions can be reduced to the study of copulas!
 
@@ -98,8 +102,7 @@ i.e. $C$ is a copula of $F$.
 -    **Frank copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = -\theta^{-1} \log\biggl( 1 + \frac{(e^{-\theta u_{1}} - 1)(e^{-\theta u_{2}} - 1)}{e^{-\theta} - 1}\biggr)$ with the dependence parameter assuming any real value.
 -    **Gumbel copula**{: style="color: red"}<br />
-     $C(u_{1}, u_{2} ; \theta) = \exp\biggl( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1 / \theta} \biggr)$
-     where
+     $C(u_{1}, u_{2} ; \theta) = \exp\biggl( -({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1 / \theta} \biggr)$,
      $${u}'_{j} = -\log u_{j} \text{ and } \theta \in [1, \infty).$$
 
 ### The Frechet bounds for a copula
@@ -113,13 +116,17 @@ F_{U}(y_{1}, \dots , y_{n}) &= \min \{ F_{1}, \dots , F_{n} \},
 \end{align}
 $$
 
-which satisfy $\max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \} \leq F(y_{1}, \dots , y_{n}) \leq \min \{ F_{1}, \dots , F_{n} \}$. The upper bound is always a cdf while the lower bound is a cdf for $n = 2$.
+which satisfy
+
+$$\max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \} \leq F(y_{1}, \dots , y_{n}) \leq \min \{ F_{1}, \dots , F_{n} \}.$$
+
+The upper bound is always a cdf while the lower bound is a cdf for $n = 2$.
 
 This definition also applies to copulas:
 
-$$\max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \} \leq C(y_{1}, \dots , y_{n}) \leq \min \{ F_{1}, \dots , F_{n}$$
+$$\max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \} \leq C(y_{1}, \dots , y_{n}) \leq \min \{ F_{1}, \dots , F_{n} \}$$
 
-The upperbound is a copula, which we denote as $C_{U}(y_{1}, \dots , y_{n})$. If the lower bound is also a copula, then it is denoted as $C_{L}(y_{1}, \dots , y_{n})$.
+Knowledge of Frechet-Hoeffding bounds is important in selecting an appropriate copula. The desirable feature of a copula is that it should cover the sample space between the lower and the upper bounds and that as $\theta$ approaches the lower (upper) bound of its permissible range, the copula approaches the Frechet-Hoeffding lower (upper) bound.
 
 ## Construction of a Copula
 
