--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -102,9 +102,9 @@ i.e. $C$ is a copula of $F$.
 -    **Frank copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = -\theta^{-1} \log\biggl( 1 + \frac{(e^{-\theta u_{1}} - 1)(e^{-\theta u_{2}} - 1)}{e^{-\theta} - 1}\biggr)$ with the dependence parameter assuming any real value.
 -    **Gumbel copula**{: style="color: red"}<br />
-     $$C(u_{1}, u_{2} ; \theta) = e^{\biggl(-({u}'_{1}^{\theta} + {u}'_{2}^{\theta})^{1/\theta}\biggr)},$$
+     $$C(u_{1}, u_{2} ; \theta) = \exp\biggl(-(u'_{1}^{\theta} + u'_{2}^{\theta})^{1/\theta}\biggr),$$
      where
-     $${u}'_{j} = -\log u_{j}, \theta \in [1, \infty)$$.
+     $$u'_{j} = -\log u_{j}, \theta \in [1, \infty)$$.
 
 ### The Frechet bounds for a copula
 
