--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -26,7 +26,7 @@ $$F(y_{1}, \dots , y_{m}) = \mathbb{P}\{Y_{i} \leq y_{i}; i = 1, \dots , m\},$$
 
 and the **survival function**{: style="color: red"} corresponding to $F(y_{1}, \dots , y_{m})$ is given by $$\overline{F}(y_{1}, \dots , y_{m}) = \mathbb{P}\{Y_{i} > y_{i}; i = 1, \dots , m\}.$$
 
-**Definition 1.** An $n$-dimensional copula (briefly, an *n-copula*) is a function $C$ from the unit $n$-cube $[0, 1]^{n}$ to the unit interval $[0, 1]$ which satisfies the following conditions:
+**Definition 1.** An $n$-dimensional **copula**{: style="color: red"} (briefly, an *n-copula*) is a function $C$ from the unit $n$-cube $[0, 1]^{n}$ to the unit interval $[0, 1]$ which satisfies the following conditions:
 
 1. $C(1, \dots , 1, a_{m}, 1, \dots , 1) = a_{m}$ for each $m \leq n$ and all $a_{m} \in [0, 1]$.
 
@@ -101,10 +101,27 @@ i.e. $C$ is a copula of $F$.
      $C(u_{1}, u_{2} ; \theta) = (u_{1}^{-\theta} + u_{2}^{-\theta} - 1)^{-1/\theta}$ with the dependence parameter $\theta$ restricted on the region $(0, \infty)$.
 -    **Frank copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = -\theta^{-1} \log\biggl( 1 + \frac{(e^{-\theta u_{1}} - 1)(e^{-\theta u_{2}} - 1)}{e^{-\theta} - 1}\biggr)$ with the dependence parameter assuming any real value.
--    **Gumbel copula**{: style="color: red"}<br />
-     $$C(u_{1}, u_{2} ; \theta) = \exp\biggl(-(u'_{1}^{\theta} + u'_{2}^{\theta})^{1/\theta}\biggr),$$
-     where
-     $$u'_{j} = -\log u_{j}, \theta \in [1, \infty)$$.
+
+### Archimedean copulas
+
+An important particular case of copulas are Archimedean copulas. If $\phi$ (called a generator) is a convex decreasing function with a positive second derivative and $\phi(1) = 0$, and such that
+
+$$\phi : (0, 1] \rightarrow [0, +\infty).$$
+
+One can then define an inverse (or quasi-inverse if $\phi(0) < \infty$) by:
+
+$$
+\phi^{-1}(x) = \left\{
+\begin{align}
+     \phi^{-1}(x), & 0 \leq x \leq \phi(0),\\
+     0, & \phi(0) < x < +\infty.
+\end{align}
+\right.
+$$
+
+An Archimedean copula is then defined as:
+
+$$C(u, v) = \phi^{-1}[\phi(u) + \phi(v)].$$
 
 ### The Frechet bounds for a copula
 
