--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -111,17 +111,20 @@ $$\phi : (0, 1] \rightarrow [0, +\infty).$$
 One can then define an inverse (or quasi-inverse if $\phi(0) < \infty$) by:
 
 $$
-\phi^{-1}(x) = \left\{
-\begin{align}
+\phi^{-1}(x) =
+\begin{cases}
      \phi^{-1}(x), & 0 \leq x \leq \phi(0),\\
      0, & \phi(0) < x < +\infty.
-\end{align}
-\right.
+\end{cases}
 $$
 
 An Archimedean copula is then defined as:
 
-$$C(u, v) = \phi^{-1}[\phi(u) + \phi(v)].$$
+$$C(u_{1}, u_{2}) = \phi^{-1}[\phi(u_{1}) + \phi(u_{2})].$$
+
+The **Gumbel-Hougaard family**{: style="color: red"} (also known as bivariate logistic extreme value distribution) $\phi(t) = (-\ln(t))^{1/\alpha}, 0 < a < 1$ is obtained by the Laplace transform of a positive stable distribution $\phi^{-1}(t) = e^{-t^{\alpha}}. The **Gumbel copula**{: style="color: red"} is written as:
+
+$$C(u_{1}, u_{2}) = e^{\biggl( -[(-\ln(u_{1}))^{1/\alpha} + (-\ln(u_{2}))^{1/\alpha}]^{\alpha} \biggr)}.$$
 
 ### The Frechet bounds for a copula
 
