--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -104,27 +104,27 @@ i.e. $C$ is a copula of $F$.
 
 ### Archimedean copulas
 
-An important particular case of copulas are Archimedean copulas. If $\phi$ (called a generator) is a convex decreasing function with a positive second derivative and $\phi(1) = 0$, and such that
+An important particular case of copulas are Archimedean copulas. If $\varphi$ (called a generator) is a **convex decreasing** function with a positive second derivative and $\varphi(1) = 0$, and such that
 
-$$\phi : (0, 1] \rightarrow [0, +\infty).$$
+$$\varphi : (0, 1] \rightarrow [0, +\infty).$$
 
-One can then define an inverse (or quasi-inverse if $\phi(0) < \infty$) by:
+One can then define an inverse (or quasi-inverse if $\varphi(0) < \infty$) by:
 
 $$
 \phi^{-1}(x) =
 \begin{cases}
-     \phi^{-1}(x), & 0 \leq x \leq \phi(0),\\
-     0, & \phi(0) < x < +\infty.
+     \varphi^{-1}(x), & 0 \leq x \leq \varphi(0),\\
+     0, & \varphi(0) < x < +\infty.
 \end{cases}
 $$
 
 An Archimedean copula is then defined as:
 
-$$C(u_{1}, u_{2}) = \phi^{-1}[\phi(u_{1}) + \phi(u_{2})].$$
+$$C(u_{1}, u_{2}) = \varphi^{-1}[\varphi(u_{1}) + \varphi(u_{2})].$$
 
-The **Gumbel-Hougaard family**{: style="color: red"} (also known as bivariate logistic extreme value distribution) $\phi(t) = (-\ln(t))^{1/\alpha}, 0 < a < 1$ is obtained by the Laplace transform of a positive stable distribution $\phi^{-1}(t) = e^{-t^{\alpha}}. The **Gumbel copula**{: style="color: red"} is written as:
+The **Gumbel-Hougaard family**{: style="color: red"} (also known as bivariate logistic extreme value distribution) $\varphi(t) = (-\ln(t))^{1/\alpha}, 0 < a < 1$ is obtained by the Laplace transform of a positive stable distribution $\varphi^{-1}(t) = e^{-t^{\alpha}}$ The **Gumbel copula**{: style="color: red"} is written as:
 
-$$C(u_{1}, u_{2}) = e^{\biggl( -[(-\ln(u_{1}))^{1/\alpha} + (-\ln(u_{2}))^{1/\alpha}]^{\alpha} \biggr)}.$$
+$$C(u_{1}, u_{2}) = e^{\{-[(-\ln(u_{1}))^{1/\alpha} + (-\ln(u_{2}))^{1/\alpha}]^{\alpha}\}}.$$
 
 ### The Frechet bounds for a copula
 
