--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -145,7 +145,17 @@ Making use of this theorem, we can verify that FGM family is not Archimedean.
 
 3. $Z$ and $W$ are independent.
 
-**Proof of Proposition 1.**
+**Proof of Proposition 1.** Assume that $C$ is absolutely continuous, and let $g(w, z)$ be the density of $(U, V)$ and $G(z, w) = \mathbb{P}\{Z \leq z, W \leq w\}$, then
+
+$$G(z, w) = \int_{0}^{z} \int_{0}^{w} g(w, z)\,\mathrm{d}w\,\mathrm{d}z = \int\int c(u, v) |\frac{\partial(u, v)}{\partial(z, w)}|\,\mathrm{d}u\,\mathrm{d}v$$
+
+where $c(u, v) = \frac{\partial^{2}z}{\partial u \partial v}$ is the density of the copula and $\frac{\partial(u, v)}{\partial(z, w)}$ is the Jacobian of the transformation $(u, v) \rightarrow (z, w)$. Here we have $\varphi(u) = w \cdot \varphi(z)$, $\varphi(v) = (1 - w) \cdot \varphi(z)$, and the Jacobian equal to $-\frac{\varphi(z)\varphi'(z)}{\varphi'(u)\varphi'(v)}$, which give us
+
+$$\frac{\partial^{2}z}{\partial u \partial v} = \frac{-\varphi'(u)\varphi'(v)\varphi''(z)}{\varphi'(z)^{3}}.$$
+
+Hence:
+
+$$G(z, w) = \int_{0}^{z}\int_{0}^{w} \frac{-\varphi'(u)\varphi'(v)\varphi''(z)}{\varphi'(z)^{3}} \cdot \biggl( -\frac{\varphi(z)\varphi'(z)}{\varphi'(u)\varphi'(v)} \biggr)\,\mathrm{d}z\,\mathrm{d}w = w \biggl[ z - \frac{\varphi(z)}{\varphi'(z)} \biggr]_{0}^{z} = wK(z).$$
 
 <br />
 
@@ -161,7 +171,7 @@ Making use of this theorem, we can verify that FGM family is not Archimedean.
 
 ### The Frechet bounds for a copula
 
-Given an arbitrary $n$-variate joint cdf $F(y_{1}, \dots , y_{n})$ with univariate marginal cdfs $F_{1}, \dots , F_{n}$, the joint cdf is bounded below and above by the Frechet-Hoeffding lower and upper bounds, $F_{L}$ and $F_{U}$, defined as
+Given an arbitrary $n$-variate joint cdf $F(y_{1}, \dots , y_{n})$ with univariate marginal cdfs $F_{1}, \dots , F_{n}$, the joint cdf is bounded below and above by the **Frechet-Hoeffding lower and upper bounds**{: style="color: red"}, $F_{L}$ and $F_{U}$, defined as
 
 $$
 \begin{align}
@@ -198,3 +208,5 @@ The Frechet-Hoeffding lower bound of a bivariate copula is Archimedean. Specific
 [^5]: Lung-Fei Lee, Generalized Econometric Models with Selectivity, *Econometrica*, Vol. 51, No. 2 (1983), pp. 507-512.
 
 [^6]: Christian Genest and Louis-Paul Rivest, Statistical Inference Procedures for Bivariate Archimedean Copulas, *Journal of the American Statistical Association*, Vol. 88, No. 423 (1993), pp. 1034-1043.
+
+[^7]: Mohamed N. Jouini and Robert T. Clemen, Copula Models for Aggregating Expert Opinions, *Operations Research*, Vol. 44, No. 3 (1996), pp. 444-457.
