--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -145,7 +145,11 @@ Making use of this theorem, we can verify that FGM family is not Archimedean.
 
 3. $Z$ and $W$ are independent.
 
-**Proof of Proposition 1.** Assume that $C$ is absolutely continuous, and let $g(w, z)$ be the density of $(U, V)$ and $G(z, w) = \mathbb{P}\{Z \leq z, W \leq w\}$, then
+**Proof of Proposition 1.** Assume that $C$ is absolutely continuous, and let $g(w, z)$ be the density of $(U, V)$ and 
+
+$$G(z, w) = \mathbb{P}\{Z \leq z, W \leq w\},$$
+
+then:
 
 $$G(z, w) = \int_{0}^{z} \int_{0}^{w} g(w, z)\,\mathrm{d}w\,\mathrm{d}z = \int\int c(u, v) |\frac{\partial(u, v)}{\partial(z, w)}|\,\mathrm{d}u\,\mathrm{d}v$$
 
