--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -25,7 +25,9 @@ Properties of copulas are analogous to properties of joint distributions. The **
 
 $$F(y_{1}, \dots , y_{m}) = \mathbb{P}\{Y_{i} \leq y_{i}; i = 1, \dots , m\},$$
 
-and the **survival function**{: style="color: red"} corresponding to $F(y_{1}, \dots , y_{m})$ is given by $$\overline{F}(y_{1}, \dots , y_{m}) = \mathbb{P}\{Y_{i} > y_{i}; i = 1, \dots , m\}.$$
+and the **survival function**{: style="color: red"} corresponding to $F(y_{1}, \dots , y_{m})$ is given by
+
+$$\overline{F}(y_{1}, \dots , y_{m}) = \mathbb{P}\{Y_{i} > y_{i}; i = 1, \dots , m\}.$$
 
 **Definition 1.** An $n$-dimensional **copula**{: style="color: red"} (briefly, an *n-copula*) is a function $C$ from the unit $n$-cube $[0, 1]^{n}$ to the unit interval $[0, 1]$ which satisfies the following conditions:
 
@@ -37,7 +39,11 @@ and the **survival function**{: style="color: red"} corresponding to $F(y_{1}, \
 
 4. $C(a_{2}, b_{2}) - C(a_{1}, b_{2}) - C(a_{2}, b_{1}) + C(a_{1}, b_{1}) \geq 0$, whenever $a_{1} \leq a_{2}$, $b_{1} \leq b_{2}$.
 
-**Property 1** says that if the realizations of $n - 1$ variables are known each with marginal probability one, then the joint probability of the $n$ outcomes is the same as the probability of the remaining uncertain outcome. **Property 2** (sometimes referred to as the **grounded** property of a copula) says that the joint probability of all outcomes is zero if the marginal probability of any outcome is zero. An $n$-copula may be viewed, or equivalently defined as an $n$-dimensional cumulative probability distribution function whose support is contained in $[0, 1]^{n}$ and whose one-dimensional margins are uniform on $[0, 1]$[^2]. In other words, an $n$-copula is an $n$-dimensional distribution function with all $n$ univariate margins being $U(0, 1)$[^3].
+**Property 1** says that if the realizations of $n - 1$ variables are known each with marginal probability one, then the joint probability of the $n$ outcomes is the same as the probability of the remaining uncertain outcome. **Property 2** (sometimes referred to as the **grounded** property of a copula) says that the joint probability of all outcomes is zero if the marginal probability of any outcome is zero. An $n$-copula may be viewed, or equivalently defined as an $n$-dimensional cumulative probability distribution function whose support is contained in $[0, 1]^{n}$ and whose one-dimensional margins are uniform on $[0, 1]$[^2]. In other words, an $n$-copula is an $n$-dimensional distribution function with all $n$ univariate margins being $U(0, 1)$[^3]. Every distributon function has at least one copula function, uniquely defined on the image set $(F_{1}(y_{1}), \dots , F_{n}(y_{n}))$ of the continuity points $(x_{1}, \dots , y_{n})$. Denote
+
+$$F_{i}(y_{i}) = \mathbb{P}\{Y_{i} \leq y_{i}\}, \quad 1 \leq i \leq n$$
+
+as the marginal function. If all the marginal functions are continuous, then the copula function is unique.
 
 Sklar's basic result is now the following:
 
@@ -123,6 +129,18 @@ An Archimedean copula is then defined as:
 
 $$C(u_{1}, u_{2}) = \varphi^{-1}[\varphi(u_{1}) + \varphi(u_{2})].$$
 
+Archimedean copulas are **symmetric** in the sense that $C(u_{1}, u_{2}) = C(u_{2}, u_{1})$ and **associative** in the sense that $C(C(u_{1}, u_{2}), u_{3}) = C(u_{1}, C(u_{2}, u_{3}))$. The density of the bivariate Archimedean copula is
+
+$$c(u_{1}, u_{2}) = \frac{\varphi''(C(u_{1}, u_{2}))\varphi'(u_{1})\varphi'(u_{2})}{[\varphi'(C(u_{1}, u_{2}))]^{3}},$$
+
+where the derivatives do not exist on the boundary $\varphi(u_{1}) + \varphi(u_{2}) = \varphi(0)$[^6]. The conditional density of the Archimedean copula is
+
+$$\frac{\partial}{\partial u_{2}}C(u_{1}, u_{2}) = \frac{\varphi'(u_{2})}{\varphi'(C(u_{1}, u_{2}))}.$$
+
+Quantifying dependence is relatively straightforward for Archimedean copulas because Kendall's tau simplifies to a function of the generator function:
+
+$$\tau = 1 + 4\int_{0}^{1}\frac{\varphi(t)}{\varphi'(t)}\,\mathrm{d}t.$$
+
 The **Gumbel-Hougaard family**{: style="color: red"} (also known as bivariate logistic extreme value distribution) $\varphi(z) = (-\log(z))^{1/\theta}, 0 < \theta < 1$ is obtained by the Laplace transform of a positive stable distribution $\varphi^{-1}(z) = e^{-z^{\theta}}$ The **Gumbel copula**{: style="color: red"} is written as:
 
 $$C(u_{1}, u_{2}) = e^{\{-[(-\log(u_{1}))^{1/\theta} + (-\log(u_{2}))^{1/\theta}]^{\theta}\}}.$$
@@ -137,7 +155,7 @@ $$\varphi(z) = \int_{z}^{1} f(u)\,\mathrm{d}u.$$
 
 Making use of this theorem, we can verify that FGM family is not Archimedean.
 
-**Proposition 1.**[^6] Let $(U, V)$ be a random vector from an Archimedean copula, with generator $\varphi$. Set $W = \frac{\varphi(U)}{\varphi(U) + \varphi(V)}$ and $Z = C(U, V)$. Then
+**Proposition 1.**[^7] Let $(U, V)$ be a random vector from an Archimedean copula, with generator $\varphi$. Set $W = \frac{\varphi(U)}{\varphi(U) + \varphi(V)}$ and $Z = C(U, V)$. Then
 
 1. W is distributed uniformly on $(0, 1)$;
 
@@ -153,7 +171,7 @@ then:
 
 $$G(z, w) = \int_{0}^{z} \int_{0}^{w} g(w, z)\,\mathrm{d}w\,\mathrm{d}z = \int\int c(u, v) |\frac{\partial(u, v)}{\partial(z, w)}|\,\mathrm{d}u\,\mathrm{d}v$$
 
-where $c(u, v) = \frac{\partial^{2}z}{\partial u \partial v}$ is the density of the copula and $\frac{\partial(u, v)}{\partial(z, w)}$ is the Jacobian of the transformation $(u, v) \rightarrow (z, w)$. Here we have $\varphi(u) = w \cdot \varphi(z)$, $\varphi(v) = (1 - w) \cdot \varphi(z)$, and the Jacobian equal to $-\frac{\varphi(z)\varphi'(z)}{\varphi'(u)\varphi'(v)}$, which give us
+where $c(u, v) = \frac{\partial^{2}z}{\partial u \partial v}$ is the density of the copula and $\frac{\partial(u, v)}{\partial(z, w)}$ is the Jacobian of the transformation $(u, v) \rightarrow (z, w)$. Here we have $\varphi(u) = w \cdot \varphi(z)$, $\varphi(v) = (1 - w) \cdot \varphi(z)$, and the Jacobian equal to $-\frac{\varphi(z)\varphi'(z)}{\varphi'(u)\varphi'(v)}$, which gives us
 
 $$\frac{\partial^{2}z}{\partial u \partial v} = \frac{-\varphi'(u)\varphi'(v)\varphi''(z)}{\varphi'(z)^{3}}.$$
 
@@ -211,6 +229,8 @@ The Frechet-Hoeffding lower bound of a bivariate copula is Archimedean. Specific
 
 [^5]: Lung-Fei Lee, Generalized Econometric Models with Selectivity, *Econometrica*, Vol. 51, No. 2 (1983), pp. 507-512.
 
-[^6]: Christian Genest and Louis-Paul Rivest, Statistical Inference Procedures for Bivariate Archimedean Copulas, *Journal of the American Statistical Association*, Vol. 88, No. 423 (1993), pp. 1034-1043.
+[^6]: Christian Genest and Jock MacKay, The Joy of Copulas: Bivariate Distributions with Uniform Marginals, *The American Statistician*, Vol. 40, No. 4 (1986), pp. 280-283.
 
-[^7]: Mohamed N. Jouini and Robert T. Clemen, Copula Models for Aggregating Expert Opinions, *Operations Research*, Vol. 44, No. 3 (1996), pp. 444-457.
+[^7]: Christian Genest and Louis-Paul Rivest, Statistical Inference Procedures for Bivariate Archimedean Copulas, *Journal of the American Statistical Association*, Vol. 88, No. 423 (1993), pp. 1034-1043.
+
+[^8]: Mohamed N. Jouini and Robert T. Clemen, Copula Models for Aggregating Expert Opinions, *Operations Research*, Vol. 44, No. 3 (1996), pp. 444-457.
